# mcp-search-console

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
mcp_server_gsc/: __init__.py  __main__.py  config.py  gsc_client.py  main.py  server.py
scripts/: bump_version.py  publish.sh
