[project]
name = "mcp-server-google-search-console"
version = "0.1.0"
description = "MCP server for Google Search Console"
authors = [
    {name = "guchey", email = "taguchi8shingen@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "pydantic",
    "typer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mcp", "google search console", "claude", "ai"]

[project.urls]
"Homepage" = "https://github.com/guchey/mcp-server-google-search-console"
"Bug Tracker" = "https://github.com/guchey/mcp-server-google-search-console/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "twine",
    "ruff",
]

[project.scripts]
mcp-server-gsc = "mcp_server_gsc.main:app"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 
