[project]
name = "mcp_server_gsc"
version = "0.0.1"
description = "MCP server para Google Search Console donde podemos hacer las peticiones directamente en Google Claude y usarlo como herramienta"
authors = [
    { name = "JaviLazaro", email = "hola@javilazaro.es" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "pydantic",
    "typer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mcp", "google search console", "claude", "ai", "gsc"]

[project.urls]
"Homepage" = "https://github.com/pichu2707/mcp-search-console"
"Bug Tracker" = "https://github.com/pichu2707/mcp-search-console/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "twine",
    "ruff",
]

[project.scripts]
mcp-server-gsc = "mcp_server_gsc.main:app"

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 